@@ -105,13 +105,16 @@ Essentially, all you have to do is follow Ruby conventions, and the library will
 do the rest. All of the examples are written following this standard.
 
 
-=== 2.2 - Using the Sandbox:
+=== 2.2 - Using the Test Account:
 
-In order to use the sandbox, make sure that the 'environment' parameter under
-'service' in the configuration is set to Sandbox.
-   config[:service] = {
-     :environment => 'SANDBOX'
-   }
+For testing purposes, obtain a Test Account in the production environment. Any
+request against a Test Account inccurs no API units charge. See this guide for
+more details:
+
+  https://developers.google.com/adwords/api/docs/test-accounts
+
+To use the library against a Test Account, set client_customer_id property in
+the configuration file to its client customer ID.
 
 
 === 2.3 - Logging:
