@@ -44,7 +44,8 @@
   :client_customer_id: INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE
   :user_agent: INSERT_YOUR_USER_AGENT_HERE
 :service:
-  :environment: SANDBOX
+  # Only production environment is available now, see: http://goo.gl/Plu3o
+  :environment: PRODUCTION
 :connection:
   # Enable to request all responses to be compressed.
   :enable_gzip: false
