@@ -21,6 +21,9 @@
 # This example illustrates how to create an account. Note by default this
 # account will only be accessible via parent MCC.
 #
+# Note: This code example uses MCC-level calls and won't work with Test
+# Accounts, see: https://developers.google.com/adwords/api/docs/test-accounts
+#
 # Tags: ManagedCustomerService.mutate
 
 require 'adwords_api'
