@@ -19,6 +19,9 @@
 #           limitations under the License.
 #
 # This example gets and downloads an Ad Hoc report from a XML report definition.
+#
+# Note: This code example uses MCC-level calls and won't work with Test
+# Accounts, see: https://developers.google.com/adwords/api/docs/test-accounts
 
 require 'thread'
 
