@@ -21,6 +21,9 @@
 # This example illustrates how to retrieve the number of API units usage for a
 # client account for the current month.
 #
+# Note: This code example uses MCC-level calls and won't work with Test
+# Accounts, see: https://developers.google.com/adwords/api/docs/test-accounts
+#
 # Tags: InfoService.get
 
 require 'adwords_api'
